@@ -1,5 +1,6 @@
 #compdef run-help
 local d expl
+local HELPDIR=${HELPDIR:-/usr/share/zsh/$ZSH_VERSION/help}
 [[ -d $HELPDIR ]] && {
 	d=($HELPDIR/*(:t))
 	(($#d)) && _wanted commands expl 'command' compadd -a d
