@@ -23,7 +23,7 @@
   added.
 </longdescription>
 <use>
-  <flag name="compile">Byte-compile to speed up. Do not use this if you are cross-compiling</flag>
+  <flag name="compile">Byte-compile. This costs disk space and may make things faster or slower. Do not use this if you are cross-compiling</flag>
   <flag name='completion_AIX'>Install zsh completions for AIX</flag>
   <flag name='completion_BSD'>Install zsh completions for BSD</flag>
   <flag name='completion_Cygwin'>Install zsh completions for Cygwin</flag>
