@@ -1,1 +1,1 @@
-DIST zshrc-mv-2.7.tar.gz 8184 SHA256 9ee0061756249911e6f9ceeb1c3d8de8b1cbd5f3ebe5465391856cae5bfaccb4 SHA512 23a846300791bb8c6621ad7018573b91536c93d85745301d76b5c250a65ef06c80229b190af07ffe448e43d1c14076fab43b8059be926c820ca67a4162416be3 WHIRLPOOL 3b24a3a4cc535c010487f8bc4222ae9798adc67686bb9b77b52434aa5d417e135e96d9900238500fbaf806abbb29ffc242537f9290112ec47357e13c023f9ef7
+DIST zshrc-mv-2.8.tar.gz 8234 SHA256 589a9141748a6384a6a597a3c0d81c4860cefb388bca44e3e9369036972909f6 SHA512 d2af8a3bfed057d0080b5226e5dc06fc2559e434b40f5b94ed677b8434d22fcd71e714913c94fc567d790a00bb3eadbad6bd1de086718cc6402b52efaf381ae9 WHIRLPOOL 8c92a90e6d6460b52231f1034cfd9df6815462b7e63d0555a1af4c6c323ca95823caaf2b76b7634cde8bd9020734b047e43ccc5f73a1fcc01b2a2a13558546c4
