@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*zshrc-2.8 (12 Nov 2013)
+
+  12 Nov 2013; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild.
+
 *zshrc-2.7 (31 Aug 2013)
 
   31 Aug 2013; Martin Väth <martin@mvath.de>:
